# edgework

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
docs/: architecture.md
scripts/: alert_bot.py  edgework_exec.py  pull_history.py
src/edgework/: alerts.py  briefing.py  config.py  qna.py  risk.py  slicer.py  smart_money.py  sodex_client.py  sosovalue_client.py
src/edgework/exchange/: __init__.py  constants.py  execution_client.py  order_builder.py  signing.py
tests/: conftest.py  test_alerts.py  test_exchange.py  test_qna_filters.py  test_risk.py  test_slicer.py
