[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgework"
version = "0.1.0"
description = "Trade analytics for pro traders on SoDEX."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "nftradercrypto" }]

dependencies = [
  "streamlit>=1.36",
  "pandas>=2.2",
  "numpy>=1.26",
  "plotly>=5.22",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "anthropic>=0.34",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyarrow>=16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "ipython>=8.25",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
